<resources>
    <string name="app_name">Smart LaPalma</string>

    <!--Activity names-->
    <string name="main_activity_name">Inicio</string>
    <string name="news_activity_name">Noticias</string>
    <string name="contact_activity_name">Contacto</string>
    <string name="about_activity_name">Acerca de</string>
    <string name="transports_activity_name">Transporte público</string>
    <string name="bus_activity_name">Paradas de autobús</string>
    <string name="taxi_activity_name">Paradas de taxi</string>
    <string name="interest_activity_name">Lugares de interés</string>
    <string name="meteo_activity_name">Meteorología</string>

    <!--Material Drawer-->
    <string name="resident">Residente</string>
    <string name="tourist">Turista</string>

    <string name="init">INICIO</string>
    <string name="news">NOTICIAS</string>
    <string name="meteorology">METEOROLOGÍA</string>
    <string name="transport">TRANSPORTE PÚBLICO</string>
    <string name="interest_places">LUGARES DE INTERÉS</string>
    <string name="contact">CONTACTO</string>
    <string name="about">ACERCA DE</string>
    <string name="exit">SALIR</string>

    <!--Splash Activity-->
    <string name="splash_network_error_face" translatable="false">Ups... :(</string>
    <string name="splash_network_error">Sin Internet no puede funcionar esta aplicación... Consigue acceso y luego pulsa en recargar:</string>

    <!--Contact Activity-->
    <string name="internet_error">Ohh... No tienes conexión a Internet</string>

    <!--Detail New Activity-->
    <string name="share_option">Seleccione una aplicación</string>
    <string name="for_more_info">Puedes encontrar toda la noticia en la app Smart LaPalma</string>
    <string name="app_url" translatable="false">https://play.google.com/apps/testing/com.user.jose.smartlapalma</string>

    <!--Transport Activity-->
    <string name="taxi_button">Taxi</string>
    <string name="autobus_button">Autobús</string>
    <string name="intro_transports">Seleccione el transporte que desea consultar:</string>

    <!--Bus Activity-->
    <string name="snipped_intro">Líneas:</string>

    <!--Taxi Activity-->
    <string name="taxi_toast">Teléfono:</string>
    <string name="phone_not_available">Teléfono no disponible</string>

    <!--Interest places Activity-->
    <string name="accommodation">Alojamiento:</string>
    <string name="church">Iglesia:</string>
    <string name="direction">Dirección:</string>
    <string name="archeological_site">Lugar arqueológico:</string>
    <string name="library">Biblioteca:</string>
    <string name="monument">Monumento:</string>
    <string name="direction_not_available">Dirección no disponible</string>

    <!--Meteo Activity-->
    <string name="la_palma">Isla de La Palma</string>
    <string name="rain_probability">Prob. de Lluvia</string>
    <string name="wind">Viento</string>
    <string name="thermal_sensation">S. Térmica</string>
    <string name="humidity">Humedad</string>
    <string name="next_days">PRÓXIMOS DÍAS</string>
    <string name="degree" translatable="false">º</string>
    <string name="percentage" translatable="false">%</string>
    <string name="velocity" translatable="false">km/h</string>

    <!--Months-->
    <string name="january">Enero</string>
    <string name="february">Feb</string>
    <string name="march">Marzo</string>
    <string name="april">Abril</string>
    <string name="may">Mayo</string>
    <string name="june">Junio</string>
    <string name="july">Julio</string>
    <string name="august">Agosto</string>
    <string name="september">Sept</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dic</string>

    <!--Errors-->
    <string name="gps_conection_error">Se ha producido un error al obtener la posición GPS</string>
    <string name="gps_not_available">No se mostrará su ubicación en el mapa</string>
    <string name="items_not_found">No se han podido cargar los datos</string>

    <!--GPS alert dialog-->
    <string name="text_gps_dialog">Su GPS se encuentra desactivado. ¿Desea activarlo?</string>
    <string name="yes">SÍ</string>
    <string name="no">NO</string>

    <!--Resident fragment-->
    <string name="resident_fragment_news_title">Últimas noticias</string>
    <string name="resident_fragment_news_subtitle">Desliza hacia los lados o pulsa sobre una noticia si quieres saber más</string>
    <string name="resident_fragment_weather_subtitle">Para más información diríjase a la sección de meteorología</string>
    <string name="weather_today">Hoy en La Palma</string>

    <!--Weather description states-->
    <string name="weather_description_12">Poco nuboso</string>
    <string name="weather_description_43">Intervalos nubosos con lluvia escasa</string>
    <string name="weather_description_14">Nuboso</string>
    <string name="weather_description_13">Intervalos nubosos</string>
    <string name="weather_description_44">Nuboso con lluvia escasa</string>
    <string name="weather_description_45">Muy nuboso con lluvia escasa</string>
    <string name="weather_description_15">Muy nuboso</string>
    <string name="weather_description_24">Nuboso con lluvia</string>
    <string name="weather_description_23">Intervalos nubosos con lluvia</string>
    <string name="weather_description_26">Cubierto con lluvia</string>
    <string name="weather_description_25">Muy nuboso con lluvia</string>
    <string name="weather_description_11">Despejado</string>
    <string name="weather_description_16">Cubierto</string>
    <string name="weather_description_17">Nubes altas</string>
    <string name="weather_description_33">Intervalos nubosos con nieve</string>
    <string name="weather_description_34">Nuboso con nieve</string>
    <string name="weather_description_35">Muy nuboso con nieve</string>
    <string name="weather_description_36">Cubierto con nieve</string>
    <string name="weather_description_27">Chubascos</string>
    <string name="weather_description_53">Tormenta</string>
    <string name="weather_description_granizo">Granizo</string>
    <string name="weather_description_bruma">Bruma</string>
    <string name="weather_description_niebla">Niebla</string>
    <string name="weather_description_calima">Calima</string>

</resources>
