<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    tools:context=".Views.Activities.TransportsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/intro_transports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="22dp"
            android:text="@string/intro_transports"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/taxi_button"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:backgroundTint="@color/buttonColor"
                android:textColor="@color/md_white_1000"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/taxi_button"/>

            <Button
                android:id="@+id/bus_button"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:backgroundTint="@color/buttonColor"
                android:textColor="@color/md_white_1000"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/autobus_button"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>