<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    android:orientation="vertical"
    tools:context=".Views.Fragments.ResidentFragment">

    <!-- Spinner when data is loading -->
    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Spinner"
            android:background="@null">
        </ProgressBar>
    </LinearLayout>

    <!--Error message-->
    <TextView
        android:id="@+id/error_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internet_error"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:textSize="28dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/error_imageview"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:src="@drawable/sadface"/>

    <ScrollView
        android:id="@+id/resident_fragment_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideOverlay"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/meteo_scroll_view_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="35dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/resident_fragment_news_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:gravity="center"
                android:text="@string/resident_fragment_news_subtitle"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/news_viewpager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="25dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>